c4prj1_deck/grade.txt
Grading at Sat Sep  1 00:57:38 UTC 2018
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:56:38: error: expected ‘)’ before ‘;’ token
   d->cards = malloc(sizeof(*d->cards);
                                      ^
deck.c:65:1: error: expected ‘;’ before ‘}’ token
 }
 ^
deck.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
